fixed navbar overlap

--- a/src/resources/navbar.scss
+++ b/src/resources/navbar.scss
@@ -25,7 +25,7 @@
       display: none;
       flex-direction: column;
       position: absolute;
-      top: 100px;
+      top: 80px;
       left: 0;
       width: 100%;
       height: calc(100vh - 100px);
